--- a/index.html
+++ b/index.html
@@ -3,25 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Editable table.</title>
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <!-- pf -->
   <link rel="stylesheet" href="/css/style.css">
+  <script src="/js/vue.js"></script>
+  
 </head>
 <body>
-  <div class="">
-    edittable test
-  </div>
-  <table>
-    <tr>
-      <td>で</td>
-      <td>い</td>
-      <td>う</td>
-    </tr>
-    <tr>
-      <td>ええええ</td>
-      <td>お</td>
-      <td>か</td>
-    </tr>
+  
+  <h1>Editable Table</h1>
+  <table class="table table-responsive">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Guest</th>
+        <th scope="col">Host</th>
+        <th scope="col">Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+      <tr>
+        <th scope="row">4</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
   </table>
+  
+  <div id="app1">{{message}}</div>
+  
+  
+  <!-- scripts -->
+  <script src="/js/editableTable.js"></script>
 </body>
 </html>
