--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
   <title>Editable table.</title>
   <!-- bootstrap -->
   <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <!-- pf -->
+  <!-- pj -->
   <link rel="stylesheet" href="/css/style.css">
-  <script src="/js/vue.js"></script>
-  
 </head>
 <body>
   
   <h1>Editable Table</h1>
-  <table class="table table-responsive">
+  <table id="vueTable" class="table">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -24,7 +21,15 @@
         <th scope="col">Status</th>
       </tr>
     </thead>
-    <tbody>
+      <tbody>
+        <tr v-for="(item, index) in rows">
+          <th scope="row">{{ index + 1 }}</th>
+          <td>{{ item.guestName }}</td>
+          <td>{{ item.hostName }}</td>
+          <td>{{ item.status }}</td>
+        </tr>
+      </tbody>
+    <!-- <tbody>
       <tr>
         <th scope="row">1</th>
         <td>Mark</td>
@@ -49,13 +54,17 @@
         <td>the Bird</td>
         <td>@twitter</td>
       </tr>
-    </tbody>
+    </tbody> -->
   </table>
   
   <div id="app1">{{message}}</div>
-  
+
   
   <!-- scripts -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+  <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/js/vue.js"></script>
   <script src="/js/editableTable.js"></script>
 </body>
 </html>
