--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     <p>{{info}}</p>
   </div>
   
+  <div id="getJson">
+    <p @click="getAll">トリガー2！</p>
+    <p>{{info}}</p>
+  </div>
+  
   <!-- scripts -->
   <!-- bootstrap -->
   <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
