ファイル内コンポーネントのテストOK

--- a/index.html
+++ b/index.html
@@ -13,24 +13,6 @@
 
   <h1>Editable Table</h1>
   <div id="eTable"></div>
-  <!-- <table id="vueTable" class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Guest</th>
-        <th scope="col">Host</th>
-        <th scope="col">Status</th>
-      </tr>
-    </thead>
-      <tbody>
-        <tr v-for="(item, index) in rows">
-          <th scope="row">{{ index + 1 }}</th>
-          <td>{{ item.guestName }}</td>
-          <td>{{ item.hostName }}</td>
-          <td>{{ item.status }}</td>
-        </tr>
-      </tbody>
-  </table> -->
 
   <div id="app1">{{message}}</div>
 
@@ -42,6 +24,13 @@
   <div id="getJson">
     <p @click="getAll">トリガー2！</p>
     <p>{{info}}</p>
+  </div>
+
+  <div id="compotestarea">
+    <h3>コンポーネントテスト１</h3>
+    <div id="compotest"></div>
+    <h3>コンポーネントテスト２</h3>
+    <div id="compotest2"></div>
   </div>
 
   <!-- scripts -->
