単一ファイルコンポーネント動作OK

--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 
   <h1>Editable Table</h1>
   <div id="eTable"></div>
+  <!-- <table id="vueTable" class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Guest</th>
+        <th scope="col">Host</th>
+        <th scope="col">Status</th>
+      </tr>
+    </thead>
+      <tbody>
+        <tr v-for="(item, index) in rows">
+          <th scope="row">{{ index + 1 }}</th>
+          <td>{{ item.guestName }}</td>
+          <td>{{ item.hostName }}</td>
+          <td>{{ item.status }}</td>
+        </tr>
+      </tbody>
+  </table> -->
 
   <div id="app1">{{message}}</div>
 
@@ -27,10 +45,10 @@
   </div>
 
   <div id="compotestarea">
-    <h3>コンポーネントテスト１</h3>
-    <div id="compotest"></div>
-    <h3>コンポーネントテスト２</h3>
-    <div id="compotest2"></div>
+  	<h3>コンポーネントテスト１</h3>
+  	<div id="compotest"></div>
+  	<h3>コンポーネントテスト２</h3>
+  	<div id="compotest2"></div>
   </div>
 
   <!-- scripts -->
