--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       </tbody>
   </table> -->
   <div id="toastArea"></div>
+  <div id="hub"></div>
 
+
+  <!-- テスト -->
   <div id="app1">{{message}}</div>
 
   <div id="getInfoTrigger">
