--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
   <div id="app1">{{message}}</div>
 
   <div id="getInfoTrigger">
-    <p @click="getAll">トリガー！</p>
+    <h3 @click="getAll">トリガー！</h3>
     <p>{{info}}</p>
   </div>
 
-  <div id="getJson">
-    <p @click="getAll">トリガー2！</p>
+  <!-- <div id="getJson">
+    <h3 @click="getAll">axiosトリガー</h3>
     <p>{{info}}</p>
-  </div>
+  </div> -->
 
   <div id="compotestarea">
   	<h3>コンポーネントテスト１</h3>
