test用記述を分離

--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
   <!-- <script src="/node_modules/axios/dist/axios.min.js"></script> -->
   <!-- <script src="/js/vue.js"></script> -->
   <script src="/dist/js/editableTable.js"></script>
+  <script src="/dist/test.js"></script>
 </body>
 </html>
