--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- bootstrap -->
   <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
   <!-- pj -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/dist/css/style.css">
 </head>
 <body>
 
