--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   <div id="toastArea"></div>
   <div id="hub"></div>
 
+  <div id="testVuex">
+    <h2>vuexのテスト</h2>
+    <p>{{cccc}}</p>
+    <button @click="up">UP!</button>
+    <button @click="down">DOWN！</button>
+  </div>
+
   <!-- scripts -->
   <!-- bootstrap -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
