--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <div id="eTable"></div>
   <div id="toastArea"></div>
   <div id="hub"></div>
-
+<!--
   <div id="testVuex">
     <h2>vuexのテスト</h2>
     <p>{{cccc}}</p>
     <button @click="up">UP!</button>
     <button @click="down">DOWN！</button>
-  </div>
+  </div> -->
 
   <!-- scripts -->
   <!-- bootstrap -->
