独自sassがfile-loaderで動かないのを解決する

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Editable table.</title>
   <!-- bootstrap -->
-  <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
   <!-- pj -->
-  <link rel="stylesheet" href="/dist/css/style.css">
+  <!-- <link rel="stylesheet" href="/dist/css/style.css"> -->
 </head>
 <body>
 
