フォント読み込みエラーが分かりやすいように見出しにアイコンを追加

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <h1>Editable Table</h1>
+  <h1><i class="glyphicon glyphicon-th"></i>Editable Table</h1>
   <div id="eTable"></div>
   <div id="toastArea"></div>
   <div id="hub"></div>
